# devils-advocate

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  implementation_plan.md.resolved  pyproject.toml  uninstall.sh
.devils-advocate/session-initial/: final-report.md  iteration-1.md
.devils-advocate/session-plan/: execution_plan.md  iteration-1.md  iteration-2.md
commands/: devils-advocate.md
devils-advocate/: CONTEXT.md  install.sh
devils-advocate/skills/devils-advocate/: SKILL.md
src/devils_advocate_cli/: main.py
src/devils_advocate_cli/data/: SKILL.md
